src/bin/snapshots/global_retention_setter__tests__CWMetricCall_process_all_log_group_partial_success.snap
---
source: src/bin/global_retention_setter.rs
expression: metrics
---
[
    MetricDatum {
        metric_name: Some(
            "Total",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            4.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
    MetricDatum {
        metric_name: Some(
            "Updated",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            1.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
    MetricDatum {
        metric_name: Some(
            "AlreadyHasRetention",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            1.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
    MetricDatum {
        metric_name: Some(
            "AlreadyTaggedWithRetention",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            0.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
    MetricDatum {
        metric_name: Some(
            "Errored",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            2.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
]
