src/bin/snapshots/global_retention_setter__tests__process_all_log_group_partial_success.snap
---
source: src/bin/global_retention_setter.rs
expression: result
---
Error occurred. Message: Failed to update some log group retentions: [TimeoutError(TimeoutError { source: Error { message: "Some error happened", severity: Error } }), TimeoutError(TimeoutError { source: Error { message: "Some error happened when getting tags", severity: Error } })]. Severity: Error
