src/bin/snapshots/global_retention_setter__tests__process_all_log_group_single_already_tagged_with_retention.snap
---
source: src/bin/global_retention_setter.rs
expression: result
---
{"alreadyHasRetention":0,"alreadyTaggedWithRetention":1,"message":"Success","totalGroups":1,"updated":0}
