src/bin/snapshots/global_retention_setter__tests__process_all_log_group_success.snap
---
source: src/bin/global_retention_setter.rs
expression: result
---
{"alreadyHasRetention":1,"alreadyTaggedWithRetention":0,"message":"Success","totalGroups":3,"updated":2}
