src/bin/snapshots/global_retention_setter__tests__process_log_group_fails.snap
---
source: src/bin/global_retention_setter.rs
expression: result
---
TimeoutError(
    TimeoutError {
        source: Error {
            message: "Some error happened",
            severity: Error,
        },
    },
)
